ajout-logo +disparition menu mobile 320

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<section class="intro_section">
 			<header>
 				<div class="slide" id="bg_img" data-slide="bg_img" data-stellar-background-ratio="0.5">
-					<div id="caption"><div class="main_title"> Le Bistrot des Anges</div><p class="caption_title"> Cuisine Simple, Creative et Genereuse</p></div>
+					<div id="caption"><div class="logo"></div><p class="caption_title"> Cuisine Simple, Creative et Genereuse</p></div>
 				</div>
 			</header>
 		</section>
