--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 	<body>
 		<div class="header_top" id="accueil">
-			<div class="wrapper">
+			<div class="wrapper_top">
 				<nav class="menu_dropdown">
 					<ul class="menu_drop_main">
-						<li><a class="dropdown" href="#"><i class="icone"></i>Menu</a>
+						<li><a class="dropdown" href="#"><i class="icone"></i>Navigation</a>
 							<ul>
 								<li><a class="menu_items_dropdown" href="#accueil">Accueil</a></li>
 								<li><a class="menu_items_dropdown" href="#about">A Propos</a></li>
@@ -49,7 +49,11 @@
 		<section class="intro_section">
 			<header>
 				<div class="slide" id="bg_img" data-slide="bg_img" data-stellar-background-ratio="0.5">
-					<div id="caption"><div class="logo"></div><p class="caption_title"> Cuisine Simple, Creative et Genereuse</p></div>
+					<div id="caption">
+					<div class="logo"></div><p class="caption_title"> Cuisine Simple, Creative et Genereuse</p>
+					<i class="icone_down"></i>
+					</div>
+
 				</div>
 			</header>
 		</section>
@@ -112,28 +116,28 @@
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour lebar" src="img/flat_icones/bar.png"> </figure>
 								<h3>Bar</h3>
-								<p> Lorem ipsum dolor sit amet, tetur piscing elit. Suspendisse smod congue bibendum.</p>
+								<p>De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction.</p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour la cuisine" src="img/flat_icones/restaurant.png"> </figure>
-								<h3>Restaurant</h3>
-								<p> Lorem ipsum dolor sit amet, tetur piscing elit. Suspendisse smod congue bibendum.</p>
+								<h3>Brasserie</h3>
+								<p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte.</p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour le traiteur" src="img/flat_icones/catering.png"> </figure>
 								<h3>Traiteur</h3>
-								<p>Lorem ipsum dolor sit amet, tetur piscing elit. Suspendisse smod congue bibendum.</p>
+								<p>Plusieurs variations de Lorem Ipsum peuvent être trouvées ici ou là, mais la majeure partie d'entre elles a été altérée par l'addition d'humour ou de mots aléatoires qui ne ressemblent pas une seconde à du texte standard.</p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour la privatisaiton de la salle" src="img/flat_icones/privatisation.png"> </figure>
 								<h3>Privatisation</h3>
-								<p> Notre etablissement est totalement privatisable Lorem ipsum dolor sit amet, tetur.</p>
+								<p>Tous les générateurs de Lorem Ipsum sur Internet tendent à reproduire le même extrait sans fin, ce qui fait de lipsum.com le seulgénérateur de Lorem Ipsum.Il utilise un dictionnaire de plus de 200 mots latins, en combinaison de plusieurs structures de phrases.</p>
 							</div>
 						</div>
 					</div>
@@ -209,6 +213,7 @@
 			</div> 	
 		</section>
 		<footer>
+		<p class="footer_mentions"> © 2016<a href="#">Audrey Yout</a>All rights reserved | Icons made by Freepik from www.flaticon.com are licensed under CC BY 3.0</p>  
 		</footer>	
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnFVcToxa3XS7_C4z-x3Y2Dv9fEsN0JX0&sensor=false"></script>
 		<script type="text/javascript" src="Js/map.js" async></script>
