--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<h2>Maison</h2></header>
 									<div class="logo_fait_maison"></div>
 									<p> La maison propose egalement multiple specialité fait maison etc.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut diam nec neque sodales semper. Integer dictum rutrum velit vitae vehicula. Sed at congue ipsum. Sed sed libero hendrerit, tristique felis a, convallis diam.</p>
-									<a class="button" href="./downloads/menu.pdf" download="Menu_Bistrot_des_Anges"> Télécharger le menu </a>
+									<a class="button" href="./downloads/menu.pdf" download="Menu_Bistrot_des_Anges.pdf"> Télécharger le menu </a>
 								</div>
 							</div>
 						</div>
