--- a/index.html
+++ b/index.html
@@ -46,37 +46,41 @@
 				</nav>
 			</div>
 		</div>
+
+
 		<section class="intro_section">
 			<header>
 				<div class="slide" id="bg_img" data-slide="bg_img" data-stellar-background-ratio="0.5">
 					<div id="caption">
-					<div class="logo"></div><p class="caption_title"> Cuisine Simple, Creative et Genereuse</p>
+					<div class="logo"></div><p class="caption_title"> Café-brasserie du bonheur simple et original</p>
 					<i class="icone_down"></i>
 					</div>
 
 				</div>
 			</header>
 		</section>
-		
 		<section class="about_section" id="about">
 			<div class="wrapper">
-				<div class="column_display">
-					<div class="intro_text_section">
-						<header>	 
-							<span>Bienvenue!</span>
-							<h1><sup>au</sup>Bistrot des Anges</h1>	
-						</header>
-						<p> Je cuisine avec le coeur des petits plats d'inspirations Armeniennes et Francaises blablaba...</p>
-						<p class="chef">Le Chef</p>
-						<p><img class="about_img"  alt="signature" src="img/img_restau/Signature.png"></p>
+				<div class="about_list_container">	
+					<div class="column_display_about_text">
+						<div class="intro_text_section">
+							<header>	 
+								<span>Bienvenue!</span>
+								<h1><sup>au</sup>Bistrot des Anges</h1>	
+							</header>
+							<p>Situé entre la place du Vieux-Marché et la préfecture, le Bistrot des Anges et son équipe sont heureux de vous accueillir dans une ambiance conviviale et vous proposent  une cuisine simple et fraîche d'inspiration franco-arménienne préparée avec le coeur.</p>
+							<p class="chef">Le Chef</p>
+							<img class="about_img"  alt="signature" src="img/img_restau/Signature.png">
+						</div>
 					</div>
-					<div class="picture_about_section"> 
+					<div class="column_display_about_img">
+						<div class="picture_about_section"> 
 						<img class="intr_img"  alt="le chef" src="img/img_restau/chef.jpg">	
+						</div>
 					</div>
 				</div>
-			</div>	
+			</div>		
 		</section>
-
 		
 
 		<section class="gallerie_section" id="gallerie" >
@@ -116,28 +120,28 @@
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour lebar" src="img/flat_icones/bar.png"> </figure>
 								<h3>Bar</h3>
-								<p>De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction.</p>
+								<p>Pour une pause café en solo, un goûter en famille ou un apéritif entre amis, venez vous installer  au chaud ou en terrasse et choississez parmi notre large gamme de boissons. </p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour la cuisine" src="img/flat_icones/restaurant.png"> </figure>
 								<h3>Brasserie</h3>
-								<p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte.</p>
+								<p> À la carte, des formules rapides ou  gourmandes, un plat du jour qui varie selon les envies du chef et des plats fixes. Nous proposons également des sandwiches à déguster sur place ou sur le pouce.</p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour le traiteur" src="img/flat_icones/catering.png"> </figure>
 								<h3>Traiteur</h3>
-								<p>Plusieurs variations de Lorem Ipsum peuvent être trouvées ici ou là, mais la majeure partie d'entre elles a été altérée par l'addition d'humour ou de mots aléatoires qui ne ressemblent pas une seconde à du texte standard.</p>
+								<p>Surprenez vos invités ! Tout au long de l'année, le Bistrot des Anges met à votre disposition un service traiteur à emporter. N'hésitez pas à nous contacter pour plus de renseignements.</p>
 							</div>
 						</div>
 						<div class="column_services_display">
 							<div class="service_text_section"> 
 								<figure><img class="services_img"  alt="icone pour la privatisaiton de la salle" src="img/flat_icones/privatisation.png"> </figure>
 								<h3>Privatisation</h3>
-								<p>Tous les générateurs de Lorem Ipsum sur Internet tendent à reproduire le même extrait sans fin, ce qui fait de lipsum.com le seulgénérateur de Lorem Ipsum.Il utilise un dictionnaire de plus de 200 mots latins, en combinaison de plusieurs structures de phrases.</p>
+								<p>Trop d'invités ? Pas la place ni le temps d'organiser votre évènement ? Notre établissement est entièrement privatisable. Notre équipe s'occupe de l'ambiance, de la déco et du repas.</p>
 							</div>
 						</div>
 					</div>
@@ -165,7 +169,7 @@
 								<header><span>Fait</span>
 									<h2>Maison</h2></header>
 									<div class="logo_fait_maison"></div>
-									<p> La maison propose egalement multiple specialité fait maison etc.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut diam nec neque sodales semper. Integer dictum rutrum velit vitae vehicula. Sed at congue ipsum. Sed sed libero hendrerit, tristique felis a, convallis diam.</p>
+									<p> Au Bistrot des Anges, nous vous proposons une cuisine  fraîche, simple, essentiellement faite maison et résolument  savoureuse. Ici, le chef prépare lui même sa charcuterie et mitonne pour vous de délicieuses spécialités armeniennes et francaises. De quoi  ravir les gourmands et les curieux !</p>
 									<a class="button" href="./downloads/menu.pdf" download="Menu_Bistrot_des_Anges.pdf"> Télécharger le menu </a>
 								</div>
 							</div>
@@ -185,7 +189,7 @@
 					<div class="ornament_bottom_right"></div>
 						<header class="section_title_events"><span>Nos</span><h2>Evenements</h2></header>
 						<div class="ornament_events_text"></div>
-						<p>Visitez notre page <a class="fb" href="https://www.facebook.com/Bistrot-Des-Anges-954574214598345/timeline?ref=page_internal">Facebook</a> et retrouvez tous les événements.</p>
+						<p>Retransmissions de rencontres sportives, soirées à thème, déjeuners exceptionnels... Visitez notre page <a class="fb" href="https://www.facebook.com/Bistrot-Des-Anges-954574214598345/timeline?ref=page_internal">Facebook</a> et retrouvez tous nos événements.</p>
 					</div>
 				</div>
 			</div>		
@@ -198,11 +202,11 @@
 						<h2>Contacter</h2></header>
 						<div class="ornament_contact"></div>
 						<p>
-						Besoin de reserver une table , notre restaurant ou tout autre renseignements. <a class="email" href="tel:+33235152016">Appellez nous</a> ou  <a class="email" href="mailto:margarita@blabla.com?Subject=Demande%20d%20Reservation"> Envoyez nous un Email</a> et nous serons heureux de repondre a vos questions.</p>
+						Pour réserver une table, notre restaurant ou tout autre renseignement,<br><a class="email" href="tel:+33235152016">appellez nous</a> ou  <a class="email" href="mailto:margarita@blabla.com?Subject=Demande%20d%20Reservation"> envoyez nous un Email</a> et nous serons heureux de répondre à vos questions.</p>
 					</div>
 					<div class="inner_map_overlay">
 						<div class="inner_map_title"><h3 class="contact_info">Contact</h3><p class="hours">58 Avenue Gustave Flaubert, 76000 Rouen</p><p class="hours">Tel:02 35 15 20 16</p></div>
-						<div class="inner_map_title"><h3 class="contact_info">Horaires d'ouverture</h3><p>Lundi-Vendredi</p><p class="hours">07h00-20h00*</p><p>Samedi</p><p class="hours">09h00-20h00*</p><p>Fermé le Dimanche</p><p class="conditions">*Sauf événement spécial</p></div>
+						<div class="inner_map_title"><h3 class="contact_info">Horaires d'ouverture</h3><p>Lundi-Vendredi</p><p class="hours">7h00-20h00*</p><p>Samedi</p><p class="hours">9h00-20h00*</p><p>Fermé le Dimanche</p><p class="conditions">*Sauf événement spécial</p></div>
 					</div>
 				</div>
 
@@ -213,7 +217,7 @@
 			</div> 	
 		</section>
 		<footer>
-		<p class="footer_mentions"> © 2016<a href="#">Audrey Yout</a>All rights reserved | Icons made by Freepik from www.flaticon.com are licensed under CC BY 3.0</p>  
+		<p class="footer_mentions">© Le Bistrot des Anges. Conception <a href="#">Audrey Yout</a> | Icônes : flaticon.com, license CC BY 3.0</p>  
 		</footer>	
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnFVcToxa3XS7_C4z-x3Y2Dv9fEsN0JX0&sensor=false"></script>
 		<script type="text/javascript" src="Js/map.js" async></script>
