--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					<div class="overlay_evenements_inner">
 					<div class="events_ornament_top"></div>
 						<header class="section_title_events"><span>Nos</span><h2>Evenements</h2></header>
-						<div class="ornament_events_text"></div>
+						<a class="fb" href="https://www.facebook.com/Bistrot-Des-Anges-954574214598345/timeline?ref=page_internal"><div class="ornament_events_text"></div></a>
 						<p>Retransmissions de rencontres sportives, soirées à thème, déjeuners exceptionnels... Visitez notre page <a class="fb" href="https://www.facebook.com/Bistrot-Des-Anges-954574214598345/timeline?ref=page_internal">Facebook</a> et retrouvez tous nos événements.</p>
 					</div>
 				</div>
