--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta http-equiv="x-rim-auto-match" content="none">
 		<meta name="MobileOptimized" content="320">
+		<meta name="google-site-verification" content="nAtD9tr-f0K080NKrOMlwgm-Osp7aovMJaIiXcz9IaA" />
 		<title>Le Bistrot des Anges</title>
 		<link rel="stylesheet" href="stylesheets/style.css" type='text/css'>
 		<link rel="stylesheet" href="Js/owlcarousel/owl.carousel.css" type='text/css'>
