--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 	<html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<meta name="format-detection" content="telephone=no">
-		<meta http-equiv="x-rim-auto-match" content="none">
-		<meta name="MobileOptimized" content="320">
-		<meta name="google-site-verification" content="nAtD9tr-f0K080NKrOMlwgm-Osp7aovMJaIiXcz9IaA" />
 		<title>Le Bistrot des Anges</title>
+		<meta name="google-site-verification" content="nAtD9tr-f0K080NKrOMlwgm-Osp7aovMJaIiXcz9IaA" />
+		<META HTTP-EQUIV="Content-Language" CONTENT="fr">
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="format-detection" content="telephone=no"/>
+		<meta http-equiv="x-rim-auto-match" content="none"/>
+		 
+		<meta name="description" content="Le Bistrot des Anges à Rouen"/>
+		<meta name="author" content="ay.fr"/>
+		<META NAME="keywords" CONTENT="Brasserie, brasserie, Café, café, Rouen, rouen, Préfecture, prefecture, place du Vieux-Marché, place du vieux marché, vieux marché, Spécialitées Armenienne, armenienne, cuisine, fait maison,  Fait Maison">
+		<meta name="MobileOptimized" content="320"/>
+		<meta name="robots" content="index,follow">
 		<link rel="stylesheet" href="stylesheets/style.css" type='text/css'>
 		<link rel="stylesheet" href="Js/owlcarousel/owl.carousel.css" type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700%7cVollkorn:400,700,400italic,700italic%7cParisienne%7cLato:400,300,100,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -207,7 +213,7 @@
 			</div> 	
 		</section>
 		<footer>
-		<p class="footer_mentions">© Le Bistrot des Anges. Conception <a href="#">Audrey Yout</a> | Icônes : flaticon.com, license CC BY 3.0</p>  
+		<p class="footer_mentions">© Le Bistrot des Anges. Conception <a href="#">AY</a> | Icônes : flaticon.com, license CC BY 3.0</p>  
 		</footer>	
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnFVcToxa3XS7_C4z-x3Y2Dv9fEsN0JX0&sensor=false"></script>
 		<script type="text/javascript" src="Js/map.js" async></script>
