--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		 
 		<meta name="description" content="Le Bistrot des Anges à Rouen"/>
 		<meta name="author" content="ay.fr"/>
-		<META NAME="keywords" CONTENT="Brasserie, brasserie, Café, café, Rouen, rouen, Préfecture, prefecture, place du Vieux-Marché, place du vieux marché, vieux marché, Spécialitées Armenienne, armenienne, cuisine, fait maison,  Fait Maison">
+		<META NAME="keywords" CONTENT=" Bistrot des Anges, bistrot des anges, Brasserie, brasserie, Café, café, Rouen, rouen, Préfecture, prefecture, place du Vieux-Marché, place du vieux marché, vieux marché, Spécialitées Armenienne, armenienne, cuisine, fait maison,  Fait Maison">
 		<meta name="MobileOptimized" content="320"/>
 		<meta name="robots" content="index,follow">
 		<link rel="stylesheet" href="stylesheets/style.css" type='text/css'>
