--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="format-detection" content="telephone=no"/>
 		<meta http-equiv="x-rim-auto-match" content="none"/>
-		 
+		 <meta name="title" content="Bistrot des Anges"/>
 		<meta name="description" content="Le Bistrot des Anges à Rouen"/>
 		<meta name="author" content="ay.fr"/>
-		<META NAME="keywords" CONTENT=" Bistrot des Anges, bistrot des anges, Brasserie, brasserie, Café, café, Rouen, rouen, Préfecture, prefecture, place du Vieux-Marché, place du vieux marché, vieux marché, Spécialitées Armenienne, armenienne, cuisine, fait maison,  Fait Maison">
+		<META NAME="keywords" CONTENT=" Bistrot des Anges, bistrot des anges, Brasserie, brasserie, Restauration rapide, restauration rapide, fac de droit,  Bistrot, bistrot, Café, café, Rouen, rouen, Préfecture, prefecture, place du Vieux-Marché, place du vieux marché, vieux marché, Spécialités Armeniennes, specialites armeniennes, bar privatisable, Bar privatisable, traiteur, Traiteur, cuisine, fait maison,  Fait Maison">
 		<meta name="MobileOptimized" content="320"/>
 		<meta name="robots" content="index,follow">
 		<link rel="stylesheet" href="stylesheets/style.css" type='text/css'>
