--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 		<meta name="robots" content="index,follow">
 		<link rel="stylesheet" href="stylesheets/style.css" type='text/css'>
 		<link rel="stylesheet" href="Js/owlcarousel/owl.carousel.css" type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700%7cVollkorn:400,700,400italic,700italic%7cParisienne%7cLato:400,300,100,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700%7cPinyon+Script%7cPlayfair+Display+SC:400,400italic,700,700italic,900,900italic%7cLato:400,300,100,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="header_top" id="accueil">
