mis a jour email

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 						<h2>Contacter</h2></header>
 						<div class="ornament_contact"></div>
 						<p>
-						Pour réserver une table, notre restaurant ou tout autre renseignement,<br><a class="email" href="tel:+33235152016">appellez nous</a> ou  <a class="email" href="mailto:margarita@blabla.com?Subject=Demande%20d%20Reservation"> envoyez nous un Email</a> et nous serons heureux de répondre à vos questions.</p>
+						Pour réserver une table, notre restaurant ou tout autre renseignement,<br><a class="email" href="tel:+33235152016">appellez nous</a> ou  <a class="email" href="mailto:m_rita@live.fr?Subject=Demande%20d%20Reservation"> envoyez nous un Email</a> et nous serons heureux de répondre à vos questions.</p>
 					</div>
 					<div class="inner_map_overlay">
 						<div class="inner_map_title"><h3 class="contact_info">Contact</h3><p class="hours">58 Avenue Gustave Flaubert, 76000 Rouen</p><p class="hours">Tel:02 35 15 20 16</p></div>
